# paper-reader

./: .gitignore  README.md  pyproject.toml
skill/: SKILL.md
src/paper_reader/: __init__.py  arxiv_source.py  cli.py  converter.py  fast_converter.py  server.py  store.py
